# POINTSOCCT

./: CMakeLists.txt  ClientBackend.cpp  ClientBackend.h  LeftPanel.cpp  LeftPanel.h  LoginDialog.cpp  LoginDialog.h  Main.qml  MainWindow.cpp  MainWindow.h  MenuTray.cpp  MenuTray.h  OcctWidget.cpp  OcctWidget.h  RightHeader.cpp  RightHeader.h  RightPanel.cpp  RightPanel.h  StepControl.cpp  kinematic.cpp  kinematic.h
